# ESP32s3-USB-COMPOSITE-MSC-CDC

./: .gitignore  README.md  sdkconfig.defaults
USB_MSC/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
USB_MSC/components/tinyusb/: CMakeLists.txt  tusb_config.h
USB_MSC/main/: CMakeLists.txt  app_main.c
USB_MSC_CDC/: CMakeLists.txt  README.md
USB_MSC_CDC/components/tinyusb/: CMakeLists.txt
USB_MSC_CDC/main/: CMakeLists.txt  app_main.c  sd_config.h
components/tinyusb/: tusb_config.h
main/: CMakeLists.txt  app_main.c
